examples/diagnostics/errors/invalid_integer_error.flx
// Triggers E103 (INVALID INTEGER) via i64 overflow
let x = 99999999999999999999999999999999999999999999999999;
print(x);
